Fix type-classes article and add doi for citation.

--- a/doc/sphinx/biblio.bib
+++ b/doc/sphinx/biblio.bib
@@ -525,6 +525,7 @@ the Calculus of Inductive Constructions}},
         Pdf = {http://www.lri.fr/~sozeau/research/publications/drafts/classes.pdf},
         Title = {{F}irst-{C}lass {T}ype {C}lasses},
         Year = {2008},
+        url = {https://doi.org/10.1007/978-3-540-71067-7_23},
 }
 
 @InProceedings{sugar,
